# informatics-olympiad

./: .gitignore  CMakeLists.txt  README.md
AGGRCOW/: README.md  main.cpp
AKTIEN/: main.cpp  sample.in.1  sample.in.2
BATHROOM/: README.md  bathroom-gen.py  bathroom.in.2  main.cpp
BIT/: BIT.cpp  BIT.h  README.md  main.cpp
CAVE/: README.md  cave.cpp  cave.h  graderlib.cpp  graderlib.h  main.cpp
CIRCLECROSS/: README.md  main.cpp
DNA/: README.md  dna.cpp  dna.h  main.cpp  sample.out.1
GAME/: README.md  game.cpp  game.h  main.cpp
GSS1/: README.md  main.cpp
GSS2/: README.md  main.cpp
GSS3/: README.md  main.cpp
